# xYx-ui

./: Cargo.toml  README.md
example/button/: Cargo.toml  index.html
example/button/src/: main.rs
example/button/src/styles/: index.scss
example/container/: Cargo.toml  index.html
example/container/src/: main.rs
example/icon/: Cargo.toml  index.html
example/icon/src/: main.rs
example/notification/: Cargo.toml  index.html
example/notification/src/: main.rs
fex/: Cargo.toml
fex/src/elements/: block.rs  box.rs  mod.rs  notification.rs
fex/src/layout/: container.rs
fex/src/models/: mod.rs  width.rs
ui/: Cargo.toml
ui/src/: lib.rs
ui/src/columns/: mod.rs
ui/src/models/: mod.rs  size.rs
uix/: Cargo.toml
uix/src/: lib.rs
uix/src/columns/: row.rs
uix/src/components/elements/: button.rs
uix/src/elements/: button.rs  notification.rs
uix/src/models/: color.rs  size.rs
xYx-ui/: Cargo.toml
xYx-ui/src/: lib.rs
xYx-ui/src/columns/: col.rs  row.rs
xYx-ui/src/elements/: button.rs  content.rs  delete.rs  icon.rs  notification.rs
xYx-ui/src/layout/: container.rs
xYx-ui/src/models/: color.rs
