[package]
name = "xYx-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "^0" }
wasm-bindgen = "^0"
wasm-bindgen-futures = "^0"
timer = "^0.2"
chrono = "^0.4"
lazy_static = "^1"
js-sys = "^0.3"
web-sys = "^0.3"
gloo = "^0.6"
tokio = { version = "^1", features = ["time"] }
tracing-wasm = "^0.2"
tracing= "^0.1"

