[package]
name = "button"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "^0.2", features = ["web", "router"] }
wasm-bindgen = "^0.2"
console_error_panic_hook = "*"
tracing-wasm = "^0.2"
tracing= "^0.1"

xYx-ui = {path = "../../xYx-ui"}
